@@ -76,19 +76,8 @@ true xis1 xis-strip!                              \ Strip leading and trailing w
     xis1 xis-read                           \ Read the next token from the file
     dup xis.error <> over xis.done <> AND   \ Done when ready or error
   WHILE
-    CASE                                    \ Depending on the parsed token: print the parameters
-      xis.start-xml     OF ." Start XML document:" print-attributes cr                                              ENDOF
-      xis.comment       OF ." Comment: " type cr                                                                    ENDOF
-      xis.text          OF ." Text: " type cr                                                                       ENDOF
-      xis.start-tag     OF ." Start tag: " type print-attributes cr                                                 ENDOF
-      xis.end-tag       OF ." End tag: " type cr                                                                    ENDOF
-      xis.empty-element OF ." Empty element: " type cr print-attributes cr                                          ENDOF
-      xis.cdata         OF ." CDATA section: " type cr                                                              ENDOF
-      xis.proc-instr    OF ." Proc. Instr.: " type cr print-attributes cr                                           ENDOF
-      xis.internal-dtd  OF ." Internal DTD: " type ."  Markup: " type cr                                            ENDOF
-      xis.public-dtd    OF ." Public DTD: " type ."  Markup: " ?type ."  SystemID: " ?type ."  PublicID: " ?type cr ENDOF
-      xis.system-dtd    OF ." System DTD: " type ."  Markup: " ?type ."  SystemID: " ?type cr                       ENDOF
-    ENDCASE
+    xis+dump-read-parameters                \ Dump the next token with its parameters
+   
   REPEAT
   
   xis.error = IF
